--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!--build:css css/style.min.css -->
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/style.css">
+     <!--endbuild -->
 </head>
 <body>
 <section id="cover">
@@ -288,9 +288,9 @@
     </div>
 </footer>
 <!--build:js js/main.min.js -->
-<!--<script src="js/jquery-3.3.1.min.js"></script>-->
-<!--<script src="js/bootstrap.min.js"></script>-->
-<!-- endbuild -->
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+ <!--endbuild -->
 </body>
 </html>
 
